# esia-invasives-upstream

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  pytest.ini
src/: analyze.py  download.py  manifest.py  pipeline.py  preprocessing.py  utils.py
tests/: _helpers.py  conftest.py  test_analyze.py  test_download.py  test_live_gbif.py  test_manifest.py  test_pipeline.py  test_preprocessing.py  test_utils.py
